- fixed issue with cards back content being centered instead of left aligned

--- a/site/scss/flashcard.scss
+++ b/site/scss/flashcard.scss
@@ -49,6 +49,7 @@ body {
   display: inline-block;
   overflow: hidden;
   vertical-align: top;
+  text-align: left;
 
   -webkit-border-radius: 1em;
   -moz-border-radius: 1em;
